[package]
name = "kvdb-wrapper"
version = "0.1.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2018"

[dependencies]
kvdb = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
kvdb-web = "0.7.0"
futures = "0.3.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kvdb-rocksdb = "0.9.0"
